[package]
name = "kerballaunchkey"
version = "0.1.0"
authors = ["Lyneca <atraguliauniliantauthr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
krpc_mars = { git = "https://github.com/Cahu/krpc-mars" }
protobuf = "2.20.0"
failure = "0.1.8"
midir = "0.7.0"
ctrlc = "3.1.7"

[build-dependencies]
glob = "*"
krpc_mars_terraformer = { path = "../krpc-mars-terraformer" }
